# recast_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml
.woodpecker/: api.yml  credential-injector.yml  frontend.yml  gateway.yml  rust-shared.yml
.woodpecker/scripts/: check-lib-deps.sh
apps/web/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  router.tsx  vite-env.d.ts
apps/web/src/components/: AppErrorBoundary.tsx  StepErrorBoundary.tsx
apps/web/src/components/auth/: AuthGuard.tsx
apps/web/src/components/builder/: ArrayNormalizationDialog.tsx  AuthStep.tsx  DocumentRenderer.tsx  EncryptedFieldBadge.tsx  MappingStep.tsx  NamingStep.tsx  PasswordInput.tsx  RequestBodyBuilder.tsx  SegmentedControl.tsx  SelectedFieldsPanel.tsx  StepIndicator.tsx  StepLayout.tsx  TestStep.tsx  UrlStep.tsx
apps/web/src/components/dashboard/: ServerCard.tsx
apps/web/src/components/layout/: AppShell.tsx  NavBar.tsx
apps/web/src/context/: ToastContext.tsx
apps/web/src/hooks/: useDebounce.ts  useDragToReorder.ts  useSelectedPaths.ts  useServerStatusSocket.ts  useToolInputSchema.ts
apps/web/src/lib/: clerkAppearance.ts  fetchWithAuth.ts  fieldMappingUtils.ts  jsonPathUtils.ts  jsonValidator.ts  rendererFormatters.ts  requestBodyParser.ts  toolNameUtils.ts  urlParser.ts
apps/web/src/lib/__tests__/: jsonPathUtils.test.ts  jsonValidator.test.ts  rendererFormatters.test.ts  requestBodyParser.test.ts  sample.test.ts  toolNameUtils.test.ts  urlParser.test.ts
apps/web/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx
apps/web/src/pages/servers/: NewServerPage.tsx  ServerDetailPage.tsx  ServerPlaygroundPage.tsx
apps/web/src/stores/: builderStore.ts  uiStore.ts
apps/web/src/styles/: tokens.css
apps/web/src/types/: server.ts
docker/: Dockerfile.dev-rust  Dockerfile.dev-web  docker-compose.override.yml  otel-collector-config.yaml
docker/api/: Dockerfile
docker/credential-injector/: Dockerfile
docker/gateway/: Dockerfile
docs/: SUMMARY.md  deployment.md  sidecar-ipc-protocol.md
docs/api/: README.md  error-schema.json
docs/stories/: EPIC_00_PROJECT_SETUP.md  EPIC_01_FOUNDATION_SERVICES.md  EPIC_02_GATEWAY_CORE.md  EPIC_03_BUILDER_UI.md  EPIC_04_DEPLOYMENT_OPS.md  EPIC_05_SCALABILITY.md  EPIC_06_ADVANCED_FEATURES.md  STORIES_INDEX.md
docs/ui/: SYSTEM_DESIGN.md
libs/common/: Cargo.toml
libs/common/src/: audit.rs  config.rs  error.rs  health.rs  lib.rs  middleware.rs  ssrf.rs  telemetry.rs
libs/common/src/rate_limit/: lua.rs  mod.rs
libs/common/src/testing/: database.rs  mcp_client.rs  mock_upstream.rs  mod.rs
libs/common/tests/: audit_integration.rs
libs/mcp-crypto/: Cargo.toml
libs/mcp-crypto/src/: lib.rs
libs/mcp-protocol/: Cargo.toml
libs/mcp-protocol/src/: lib.rs
migrations/: 20260329000001_initial_schema.sql  20260330000001_audit_log_immutability.sql  20260330000002_credentials_key_name.sql  20260330000003_add_hints.sql  20260330000004_add_server_description.sql  20260330000005_mcp_servers_config_version.sql  20260330000006_mcp_servers_auth.sql  20260330000007_mcp_servers_max_connections.sql  seed_dev.sql
migrations/seeds/: seed_dev.sql
services/api/: Cargo.toml  README.md
services/api/src/: app_state.rs  auth.rs  config.rs  credentials.rs  lib.rs  main.rs  middleware.rs  router.rs  servers.rs  shutdown.rs
services/api/src/handlers/: credentials.rs  mod.rs  proxy.rs  tokens.rs  users.rs  webhooks.rs
services/api/src/handlers/servers/: mod.rs  types.rs
services/api/tests/: auth_tests.rs  credential_endpoint_tests.rs  credential_tests.rs  integration_tests.rs  proxy_tests.rs  server_endpoint_tests.rs  webhook_tests.rs
services/api/tests/helpers/: mod.rs
services/credential-injector/: Cargo.toml  README.md
services/credential-injector/src/: app_state.rs  cache.rs  config.rs  inject.rs  lib.rs  main.rs  notify.rs
services/credential-injector/tests/: integration_tests.rs
services/gateway/: Cargo.toml  README.md
services/gateway/benches/: argon2_verify.rs  cache_get.rs  jsonrpc_parse.rs  router_dispatch.rs  transform_pipeline.rs
services/gateway/src/: auth.rs  cache.rs  circuit_breaker.rs  config.rs  connections.rs  health.rs  hot_reload.rs  logging.rs  main.rs  router.rs  shutdown.rs  sidecar.rs  sse.rs  tool_schema.rs  transform.rs  transport.rs  upstream.rs
services/gateway/src/protocol/: jsonrpc.rs  mod.rs
services/gateway/src/util/: mod.rs  template.rs
services/gateway/tests/: integration_tests.rs
services/gateway/tests/fixtures/: mcp-tools-list-schema.json
