[workspace]
members = [
    "services/gateway",
    "services/api",
    "services/credential-injector",
    "libs/mcp-protocol",
    "libs/mcp-crypto",
    "libs/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.70"

[workspace.dependencies]
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Telemetry
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.26"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# HTTP middleware
tower-http = { version = "0.5", features = ["trace"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
