[package]
name = "mcp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
## Enables test-support utilities: `TestDatabase`, `MockUpstream`, `TestMcpClient`.
## Never activated in production builds — only via dev-dependencies with features = ["testing"].
testing = [
    "dep:reqwest",
    "tokio/full",
]

[dependencies]
axum = "0.7"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ipnetwork = "0.21"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
deadpool-redis = "0.15"
sha1 = "0.10"
url = "2"
tracing = "0.1"
ulid = "1"
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
sqlx = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
# Always required — McpError and From<AppError> conversion live here.
mcp-protocol = { path = "../mcp-protocol" }

# Always required — AuditEvent uses Uuid for user_id / server_id fields.
uuid = { workspace = true }

# Prometheus metrics — used by the shared track_metrics middleware and metrics_handler.
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Optional — activated only by the `testing` feature.
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.4", features = ["util"] }

[lints]
workspace = true
