[package]
name = "mcp-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcp-protocol = { path = "../../libs/mcp-protocol" }
mcp-common = { path = "../../libs/common" }
mcp-crypto = { path = "../../libs/mcp-crypto" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower-http = { workspace = true, features = ["cors", "compression-gzip", "catch-panic", "timeout"] }
tower = { version = "0.4", features = ["util"] }
# JWT validation and JWKS fetching
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
# Clerk webhook signature verification
svix = "1"
# Memory zeroization for plaintext credential values
zeroize = { version = "1", features = ["derive"] }
# Token generation and hashing
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
# URL parsing for SSRF validation in server handlers
url = "2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
# Integration test utilities
mcp-common = { path = "../../libs/common", features = ["testing"] }
mcp-crypto = { path = "../../libs/mcp-crypto" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
# RSA key generation for auth tests
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"

[lints]
workspace = true
