[package]
name = "mcp-credential-injector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcp-protocol = { path = "../../libs/mcp-protocol" }
mcp-common = { path = "../../libs/common" }
mcp-crypto = { path = "../../libs/mcp-crypto" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower-http = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"
base64 = "0.22"
url = "2"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mcp-common = { path = "../../libs/common", features = ["testing"] }
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
