[package]
name = "mcp-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcp-protocol = { path = "../../libs/mcp-protocol" }
mcp-common = { path = "../../libs/common" }
mcp-crypto = { path = "../../libs/mcp-crypto" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower-http = { workspace = true }
deadpool-redis = "0.15"
moka = { version = "0.12", features = ["sync"] }
dashmap = "6"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
# Integration test utilities
mcp-common = { path = "../../libs/common", features = ["testing"] }
mcp-protocol = { path = "../../libs/mcp-protocol" }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "jsonrpc_parse"
harness = false

[[bench]]
name = "cache_get"
harness = false

[lints]
workspace = true
